# data-pipeline

./: .gitignore  README.md  data_pipeline.py  dockerfile  pyproject.toml
services/egress/: data_mart.py
services/ingress/: api_handler.py
services/io_manager/: io_handler.py  parquet_io.py
services/transform/: batch_processor.py  person_data_transformer.py
tests/: test_api_handler.py  test_batch_processor.py  test_parquet_io.py  test_person_data_transformer.py
validation/: api_validator.py
