[tool.poetry]
name = "taxfix-data-pipeline"
version = "0.1.0"
description = ""
authors = ["noumank <nouman749@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
pydantic = "^2.10.2"
email-validator = "^2.2.0"
pandasql = "^0.7.3"
duckdb = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.custom_settings]
save_path = "saved_files"  # Relative to the project root

packages = [
    { include = "services" }
]